Fixed overflow:auto issue with IE7 in IME menu
- Changed DOM structure of the menu to make the HTML standards compliant
- Changes in CSS accordingly

--- a/css/jquery.ime.css
+++ b/css/jquery.ime.css
@@ -1,4 +1,4 @@
-div.imeselector {
+.imeselector {
 	position: absolute;
 	background: url('../images/ime-active.png') no-repeat left center;
 	cursor: pointer;
@@ -13,13 +13,29 @@ div.imeselector {
 	z-index: 9999;
 }
 
-div.imeselector a {
+.imeselector a {
 	text-decoration: none;
 	outline: none;
 	color: #222222;
 	line-height: 1em;
 	padding-top: 4px;
 	padding-bottom: 4px;
+}
+
+.imeselector .caret {
+	margin-left: 2px;
+	margin-top: 8px;
+}
+
+.caret {
+	border-left: 4px solid transparent;
+	border-right: 4px solid transparent;
+	border-top: 4px solid #000000;
+	content: "";
+	display: inline-block;
+	height: 0;
+	vertical-align: top;
+	width: 0;
 }
 
 .ime-disable-link span {
@@ -39,61 +55,20 @@ div.imeselector a {
 	border-bottom: solid 1px #39d;
 	text-align: left;
 	font-size: larger;
+	font-weight: normal;
 	padding-bottom: 5px;
 	padding-left: 20px;
 	padding-top: 9px;
-	margin-bottom: 1px;
-	cursor: default;
+	margin: 0 0 1px;
 }
 
-.imeselector .caret {
-	margin-left: 2px;
-	margin-top: 8px;
-}
-
-.caret {
-	border-left: 4px solid transparent;
-	border-right: 4px solid transparent;
-	border-top: 4px solid #000000;
-	content: "";
-	display: inline-block;
-	height: 0;
-	vertical-align: top;
-	width: 0;
-}
-
-.imeselector-menu .sub-menu {
-	left: 100%;
-	position: absolute;
-	top: 0;
-	visibility: hidden;
-	margin-top: -1px;
-}
-
-.imeselector-menu li:hover .sub-menu {
-	visibility: visible;
+.ime-language-list-wrapper {
+	position: relative;
+	padding: 0;
 	display: block;
-}
-
-.imeselector-menu .checked a {
-	background: url(../images/tick.png) 4px center no-repeat;
-}
-
-ul.ime-language-list {
-	overflow: auto;
-	max-height: 150px;
 	width: 300px;
-	list-style: none;
-	padding: 0 0;
-}
-
-div.ime-language-list {
-	overflow: auto;
-	padding: 0 0;
-}
-
-.ime-language-list {
-	margin: 0;
+	overflow-y: auto;
+	max-height: 150px;
 }
 
 .imeselector-menu {
@@ -103,9 +78,9 @@ div.ime-language-list {
 	z-index: 1000;
 	display: none;
 	float: left;
+	margin-top: 13px;
 	min-width: 160px;
 	padding: 0;
-	list-style: none;
 	border: 1px solid #888;
 	background-color: #FFFFFF;
 	-webkit-border-radius: 5px;
@@ -118,6 +93,14 @@ div.ime-language-list {
 	-moz-background-clip: padding;
 	background-clip: padding-box;
 	text-align: left;
+}
+
+.imeselector-menu ul {
+	width: 100%;
+	padding: 0;
+	margin: 0;
+	list-style-type: none;
+
 }
 
 /* The triangle shaped callout */
@@ -143,23 +126,41 @@ div.ime-language-list {
 	top: -6px;
 }
 
+.imeselector-menu .sub-menu {
+	left: 100%;
+	position: absolute;
+	top: 0;
+	visibility: hidden;
+	margin-top: -1px;
+}
+
+.imeselector-menu li:hover .sub-menu {
+	visibility: visible;
+	display: block;
+}
+
+.imeselector-menu .checked a {
+	background: url(../images/tick.png) 4px center no-repeat;
+}
+
 .imeselector-menu .ime-help-link {
 	background-color: #f0f0f0;
 	border-radius: 0 0 5px 5px;
 	border-top: 1px solid #ddd;
 	margin-top: 6px;
-	padding: 2px 0 2px 0;
+	padding: 2px 0;
 	color: #444;
 }
 
-.imeselector-menu .ime-help-link>a:hover {
+.imeselector-menu .ime-help-link > a:hover {
 	background-color: #f0f0f0;
 	color: #000;
 }
 
 .imeselector-menu a {
 	display: block;
-	padding: 3px 20px;
+	padding-left: 20px;
+	padding-right: 20px;
 	clear: both;
 	font-weight: normal;
 	color: #333333;
